# Ubuntu-Patient-Care

./: .copilot-todo  .gitignore  .gitmodules  .gitpod.yml  ADAPTER_TEMPLATE.py  ARCHITECTURE_PLAN.md  BUILD_COMPLETE.md  CLOUDFLARE_TUNNEL_SETUP.md  DEVELOPER_REFERENCE.md  Dockerfile.mcp-server  FINAL_HANDOFF.md  FINAL_STATUS.md  FRONTEND_GUIDE.md  GITHUB_PUSH_SUMMARY.md  HACKATHON_SETUP.md  HTTPS_AND_VOICE_RECORDING.md  HUMAN_FLOURISHING.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  JUDGES_README.md  JUDGES_READY_CHECKLIST.md  LAUNCH_CHECKLIST.md  OCT_REVIEW_EXECUTIVE_SUMMARY.txt  PRODUCTION_DEPLOYMENT.md  Philips_QC_Checklist.csv  Philips_QC_Checklist.docx  Philips_QC_Checklist.html  Philips_QC_Checklist_DDR_AEC_Display.docx  Philips_QC_Checklist_Tests_46-49.docx  QUICK_START.md  README.md  REDESIGN_SUMMARY.md  SESSION_SUMMARY.md  SETUP_GUIDE.md  SSO_TOGGLE_COMPLETE.md  SSO_TOGGLE_FIXED.md  TASK_2_3_DONE.txt  TTS_SETTINGS_GUIDE.md  UbuntuPatientSorg_Plan.md  (+47 more)
1-RIS-Module/: QUICK_START_RIS.md  README.md  RIS_COMPLETE_FEATURES.md  RIS_FRONTEND_FIXES.md  RIS_FRONTEND_REDESIGN.md  RIS_TRANSFORMATION_SUMMARY.md  START_RIS_CORRECTLY.bat  START_YOUR_COMPLETE_RIS.md
2-Medical-Billing/: README.md
3-Dictation-Reporting/: DOCUMENTATION_INDEX_REPORTING_MODULE.md  GIT_COMMANDS_COPY_PASTE.md  INVESTIGATION_COMPLETE_SUMMARY.md  README.md  REPORTING_MODULE_COMPLETE_SUMMARY.md  REPORTING_MODULE_COMPLETION_REPORT.md  REPORTING_MODULE_CRITICAL_ACTION.md  REPORTING_MODULE_FIX_GITHUB.md  REPORTING_MODULE_VISUAL_EXPLANATION.md  START_HERE_REPORTING_MODULE_FIX.md
4-PACS-Module/: DELIVERABLES_SUMMARY.txt  PATIENT_ACCESS_IMPLEMENTATION_TASKS.md  PATIENT_ACCESS_QUICK_START.md  PATIENT_ACCESS_SUMMARY.md  PATIENT_IMAGE_ACCESS_PLAN.md  PATIENT_RECOGNITION_SYSTEM.md  README.md
Copilot-Team/: README.md
GOTG_version/: PACS-2_VISUAL_SUMMARY.txt  README.md
IBM-HACKATHON-SUBMISSION/: README.md  requirements.txt
Orthanc/: AUTHENTICATION_FIX_COMPLETE.md  CLINICIAN_DOCS_SUMMARY.md  CRITICAL_FIXES_COMPLETE.md  DEMO_LOGIN_CREDENTIALS.md  DEVELOPER_A_COORDINATION_NEEDS.md  DEVELOPER_B_COMPLETION_SUMMARY.md  DEVELOPER_B_CONTINUED_ACHIEVEMENTS.md  DEVELOPER_B_PHASE2_COMPLETE.md  DEVELOPER_B_PROGRESS_REPORT.md  DEVELOPER_COORDINATION.md  DEVICE_SCANNING_FIX_COMPLETE.md  DICOM_VIEWER_PATCH.py  DICOM_VIEWER_ROUTE_FIX.py  FIX_DICOM_VIEWER_404.md  ORTHANC_SA_INTEGRATION_TODO.md  README.md  SA_API_MIGRATION_STRATEGY.md  SA_FEATURES_MIGRATION_ANALYSIS.md  SA_PACS_REPORTING_PLAN.md  STEP_BY_STEP_FIX.md  TASK_5_DICOM_VIEWPORT_COMPLETE.md  TASK_6_LAYOUT_MANAGEMENT_COMPLETE.md  TASK_7_TEMPLATE_MANAGEMENT_COMPLETE.md  VSCode_TERMINAL_TROUBLESHOOTING.md  import_check2.py  import_check2_out.txt  import_test.py  medical_devices.db  orthanc-server-structure-analysis.md  orthanc_files_to_delete.txt  requirements.txt  run_backend_no_reload.bat  setup_models.py  setup_weights.py
Orthanc/orthanc-server/orthanc-sa-plugins/: CMakeLists.txt
Orthanc/orthanc-server/orthanc-sa-plugins/auth-bridge/: AuthBridgePlugin.cpp  SessionManager.cpp  SessionManager.h  TwoFactorAuth.cpp  TwoFactorAuth.h
Orthanc/orthanc-server/orthanc-sa-plugins/common/: SACommon.cpp  SACommon.h
Orthanc/orthanc-server/orthanc-sa-plugins/database/: SADatabaseAbstraction.h  SADatabaseExtension.cpp  SADatabaseExtension.h  SADatabaseFactory.cpp
Orthanc/orthanc-server/orthanc-sa-plugins/medical-aid/: SAMedicalAidPlugin.cpp  SAMedicalAidPlugin.h
Orthanc/orthanc-server/orthanc-sa-plugins/sa-compliance/: HPCSAValidator.cpp  HPCSAValidator.h  POPIACompliance.cpp  POPIACompliance.h  SAAuditLogger.h  SACompliancePlugin.cpp  SAComplianceValidationPlugin.cpp  SAComplianceValidationPlugin.h
Ubuntu Code Integrity Crucible (UCIC)/: CERTIFICATE_TEMPLATE.html  README.md  (+3 more)
(+10306 files in other folders)
